# wellsky-project

viki-ai/cloudtask-emulator/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
viki-ai/cloudtask-emulator/src/: client.py  main.py  settings.py
viki-ai/cloudtask-emulator/src/utils/: custom_logger.py  json_utils.py
viki-ai/distributed_job_tracking/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
viki-ai/distributed_job_tracking/src/: __init__.py  main.py  settings.py
viki-ai/distributed_job_tracking/src/adapters/: cloud_tasks.py  cloudtask_emulator_client.py  redis_adapter.py
viki-ai/distributed_job_tracking/src/middleware/: auto_headers.py  security.py
viki-ai/distributed_job_tracking/src/models/: __init__.py  job.py  metric.py  pipeline.py  simple_job.py
viki-ai/distributed_job_tracking/src/routers/: jobs.py  tracking.py
viki-ai/distributed_job_tracking/src/usecases/: __init__.py  job_service.py  pipeline_service.py  simple_job_service.py  tracking_service.py
viki-ai/distributed_job_tracking/src/util/: custom_logger.py  date_utils.py  exception.py  json_utils.py  oidc_validator.py
viki-ai/distributed_job_tracking/tests/: distributed_job_tracking_api.rest  test_api.py  test_first_status_notification.py
viki-ai/distributed_job_tracking/tests/cli/: redis_client.py
viki-ai/distributed_job_tracking/tests/integration/: test_redis.py
viki-ai/distributed_job_tracking/tests/rest/: jobs.rest  pipelines.rest
viki-ai/entity_extraction/: .gitignore  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  test_context_logging.py
viki-ai/entity_extraction/src/: __init__.py  entityschemas.py  main.py  settings.py
viki-ai/entity_extraction/src/adapters/: __init__.py  cloud_tasks.py  cloudtask.py  cloudtask_emulator_client.py  djt_client.py  firestore.py  llm.py  monitoring.py  schema_client.py  storage.py
viki-ai/entity_extraction/src/contracts/: llm.py
viki-ai/entity_extraction/src/decorators/: task_metric.py
viki-ai/entity_extraction/src/middleware/: auto_headers.py  security.py
viki-ai/entity_extraction/src/models/: app_config.py  base.py  djt_models.py  general.py  metric.py  pipeline_config.py
viki-ai/entity_extraction/src/modules/: imodule.py  module_registry.py
viki-ai/entity_extraction/src/modules/noop/: module.py
viki-ai/entity_extraction/src/modules/sleep/: module.py
viki-ai/entity_extraction/src/routers/: __init__.py  admin.py  config_pipeline.py  llm.py  pipeline.py  status.py
viki-ai/entity_extraction/src/usecases/: llm_executor.py  module_invoker.py  pipeline_config.py  pipeline_start.py  pipelines_invoker.py  prompt_invoker.py  publish_callback_invoker.py  queue_management.py  remote_invoker.py  task_orchestrator.py
viki-ai/entity_extraction/src/util/: cache_utils.py  custom_logger.py  date_utils.py  google_m2m_auth.py  google_oidc_auth.py  json_utils.py  tracing.py  uri_utils.py  uuid_utils.py
viki-ai/entity_extraction/tests/: admin_cloudtask.rest  admin_entity_config.rest  conftest.py  entity_extraction_api.rest  status.rest  test_env.py  test_main.py  test_pipeline_config.py  test_security.py  test_status_router.py
viki-ai/entity_extraction/tests/integration/: test_llm.py
viki-ai/entity_extraction/tests/unit/: test_admin_router.py  test_auto_headers_middleware.py  test_cloud_tasks.py  test_cloudtask.py  test_cloudtask_emulator_client.py  test_create_config_endpoint.py  test_custom_logger.py  test_date_utils.py  test_djt_client.py  test_entityschemas.py  test_exception.py  test_firestore.py  test_google_oidc_auth.py  test_json_utils.py  test_llm_adapter.py  test_llm_executor.py  test_llm_router.py  test_main.py  test_module_invoker.py  test_module_registry.py  test_monitoring.py  test_oidc_validator.py  test_pipeline_config_usecase.py  test_pipeline_start.py  test_pipelines_invoker.py  test_prompt_invoker.py  test_publish_callback_invoker.py  test_remote_invoker.py  test_schema_client.py  test_security_middleware.py  test_settings.py  test_status_router.py  test_storage.py  test_task_orchestrator.py  test_uri_utils.py  test_uuid_utils.py
viki-ai/medication_extraction/: .dockerignore  .env.local  .env.qa  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
viki-ai/medication_extraction/evaluation/: __init__.py  evaluation.py  llm_model_evaluation.py  model_comparison_results.json  model_evaluation.py  model_results_with_schema.json  model_results_without_schema.json
viki-ai/medication_extraction/src/: jobs.py  main.py  medication_schemas.py  model_metric.py  models.py  prompts.py  settings.py
viki-ai/medication_extraction/src/adapters/: circuit_breaker_adapter.py  cloud_tasks.py  doc_ai.py  firestore_vector_adapter.py  gcp_embeddings.py  llm.py  llm_dummyload.py  medispan_api.py  medispan_firestore_vector_search.py  paperglass.py  pgvector_adapter.py  pub_sub.py  storage.py
viki-ai/medication_extraction/src/services/: medispan_service.py  page_service.py  pdf_manager.py  queue_resolver.py
viki-ai/medication_extraction/src/utils/: context.py  custom_logger.py  date.py  exception.py  json.py  schema_utils.py  steps_logger.py  string.py
viki-ai/medication_extraction/tests/functional/: test_vector_search_adapters.py  vector_search.py
viki-ai/medication_extraction/tests/integration/: decorators.py  test_firestore.py  test_medication_extraction.py  test_medispan_match.py
viki-ai/medication_extraction/tests/unit/: test_circuit_breaker_adapter.py  test_cloud_tasks.py  test_context.py  test_doc_ai.py  test_firestore_vector_adapter.py  test_jobs.py  test_llm_adapter.py  test_medication_extraction.py  test_medispan_api.py  test_medispan_service.py  test_model_metric.py  test_pgvector_adapter.py  test_steps_logger.py  test_string.py
viki-ai/shared/: README.md  pyproject.toml
viki-ai/shared/examples/: usage_example.py
viki-ai/shared/src/viki_shared/: __init__.py
viki-ai/shared/tests/: __init__.py
viki-ai/shared/tests/test_models/: test_base.py
viki-ai/shared/tests/test_utils/: __init__.py  test_date_utils.py  test_json_utils.py
(+1531 files in other folders)
